test/Fail/Issue7792.err
Issue7792.agda:29.5-9: error: [UnequalTerms]
x != inc 1 2 of type Foo
when checking that the expression refl has type x ≡ inc 1 2
